<?xml version="1.0" encoding="utf-8"?> 
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manualTitle" 
        android:textStyle="bold"/>
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manualText" />
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorTitle" 
        android:textStyle="bold"/>
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorText"
        android:autoLink="web"/>
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/futbolchapasTitle" 
        android:textStyle="bold"/>
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/futbolchapasText" 
        android:autoLink="web"/>
        
    </LinearLayout>
            
</ScrollView>
