<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#449def">
    
    <!-- Layout for Chrono -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	style="@style/ChronoStyle"
        	android:id="@+id/chrono"/>
        
        <Button 
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	style="@style/ChronoButton"
        	android:text="@string/startChrono"
        	android:id="@+buttons/startChrono"/>
        
        <Button 
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	style="@style/ChronoButton"
        	android:text="@string/pauseChrono"
        	android:id="@+buttons/pauseChrono"/>
        
        <Button 
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	style="@style/ChronoButton"
        	android:text="@string/resetChrono"
        	android:id="@+buttons/resetChrono"/>
        
    </LinearLayout>
    
    <!-- Layout for scoreborad -->
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <!-- Layout for left scoreborad -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1">
            
            <TextView
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	style="@style/BaseNameStyle"
            	android:id="@+names/left"/>
            
            <TextView
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:gravity="center"
            	style="@style/BaseScoreboardStyle"
            	android:clickable="true"
            	android:id="@+scoreboard/left"/>
            
        </LinearLayout>
        
        <!-- Separator -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            style="@style/BaseScoreboardStyle"
            android:clickable="true"
            android:id="@+scoreboard/separator"
            android:text="@string/separator" />
        
        <!-- Layout for right scoreborad -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1">
            
            <TextView
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	style="@style/BaseNameStyle"
            	android:id="@+names/right"/>
            
            <TextView
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:gravity="center"
            	style="@style/BaseScoreboardStyle"
            	android:clickable="true"
            	android:id="@+scoreboard/rigth"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <!-- Layout for buttons -->
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="fill_parent"
        	style="@style/BaseButtonStyle"
            android:text="@string/increase"
            android:id="@+buttons/increaseLeft"
            android:onClick="increase"/>
        
        <Button 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="fill_parent"
        	style="@style/BaseButtonStyle"
            android:text="@string/decrease"
            android:id="@+buttons/decreaseLeft"
            android:onClick="decrease"/>
        
        <Button 
            android:layout_width="0dp"
            android:layout_weight="1"
       		android:layout_height="fill_parent"
       		style="@style/BaseButtonWithTextStyle"
           	android:text="@string/reverse"
           	android:id="@+buttons/reverse"
           	android:onClick="reverse"/>
        
        <Button 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="fill_parent"
        	style="@style/BaseButtonStyle"
            android:text="@string/increase"
            android:id="@+buttons/increaseRight"
            android:onClick="increase"/>
        
        <Button 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="fill_parent"
        	style="@style/BaseButtonStyle"
            android:text="@string/decrease"
            android:id="@+buttons/decreaseRight"
            android:onClick="decrease"/>
        
    </LinearLayout>

</LinearLayout>